--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "dance-portfolio",
   "private": true,
+  "homepage": "https://bgirlalma.github.io/dance-portfolio",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
